# Evolver

./: ARCH_DECISION_RECORD.md  Cargo.toml  IDEAL_MODEL_SPEC.md  PREAMBLE.md  README.md  SPECIFICATION.md  Security vs. Trainability.md  THEORY.md  Test Summary Report.md
src/: interface.rs  lib.rs  main.rs
src/body/: adapter.rs  decoder.rs  mod.rs  navigator.rs  projection.rs  topology.rs
src/control/: bias_channel.rs
src/dsl/: schema.rs  stp_bridge.rs
src/engine/: main_loop.rs
src/soul/: algebra.rs  dynamics.rs  mod.rs
src/will/: dynamics.rs  evaluator.rs  mod.rs  optimizer.rs  perturber.rs  tracer.rs
src（New）/control/: bias_channel.rs
src（Phase 3）/: decoder.rs  lib.rs  structure.rs  train_loop.rs
src（Phase 3）/core/: affine.rs  algebra.rs  mod.rs  neuron.rs  oracle.rs  param.rs
src（Phase 3）/net/: wire.rs
src（Phase 3）/topology/: folding.rs  tensor.rs
src（new）/: main.rs
theory/: Bias_Geometry.md  Constraint_Semantics.md  Energy_Definition.md  Geometry_of_Nonsmooth_Space.md  Optimization_Problem.md  Rigorous_Logic_Semantics.md  Stochasticity_and_Uncertainty.md  Symmetry_and_Equivalence.md  The_Axiomatic_Amendment.md  Topological_Amendment.md  Topological_Closure.md  Unified_Energy_Metric.md  Unified_Objective.md  Verification_Protocol.md
