[package]
name = "new_evolver"
version = "0.1.0"
edition = "2021"

# 这一行很重要，告诉 Rust 我们要编译成 Python 扩展库 (.so / .pyd)
[lib]
name = "new_evolver"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num-integer = "0.1"
# 添加 PyO3 支持
pyo3 = { version = "0.20.0", features = ["extension-module"] }
